Add Stats Examples
Adds Stats examples and additional styles that enable highlighting of changes in a given stat.

* Add Stat examples
* Add positive/negative change styles for expanded Stat usage

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -5,4 +5,5 @@ UI_components:
     href: /components/
   - href: /components/cards/
   - href: /components/charts/
+  - href: /components/stats/
   - href: /components/tables/
